--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/server.js",
   "scripts": {
     "hotloader": "webpack serve --config ./webpack.config.js --mode development --port 5000",
-    "start": "nodemon"
+    "start": "nodemon --ignore client/",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
