--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "hotloader": "webpack serve --config ./webpack.config.js --mode development --port 5000",
     "start": "nodemon --ignore client/",
-    "build": "webpack"
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; webpack"
   },
   "repository": {
     "type": "git",
@@ -50,10 +50,11 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^4.5.0",
     "react-hot-loader": "^4.13.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.11.1",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.3.0",
     "webpack-dev-server": "^3.11.1"
   }
