--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/mit6148-workshops/catbook-react#readme",
   "engines": {
-    "node": ">=18.0.0"
+    "node": "=14.17.6"
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
